# universal-ai-dev-platform

./: README.md  pyproject.toml  pytest.ini  requirements-test.txt
config/: monitoring.yml
docs/: DEVELOPMENT.md  GETTING_STARTED.md
examples/: api_usage.py  cli_examples.md  cookbook.md  quick_start.py
scripts/: github-setup.sh  setup.py
src/universal_ai_dev_platform/: __init__.py  cli.py
src/universal_ai_dev_platform/analysis/: __init__.py
src/universal_ai_dev_platform/analysis/project_scanner/: __init__.py  universal_analyzer.py
src/universal_ai_dev_platform/core/adaptation/: __init__.py  adaptation_engine.py  compatibility_analyzer.py  feature_discovery.py
src/universal_ai_dev_platform/core/intelligence/: __init__.py  pattern_analyzer.py  project_intelligence.py
src/universal_ai_dev_platform/core/orchestration/: __init__.py  agent_orchestrator.py
src/universal_ai_dev_platform/core/prediction/: __init__.py  issue_predictor.py  performance_forecaster.py  predictive_intelligence.py  risk_analyzer.py
src/universal_ai_dev_platform/monitoring/: __init__.py  health_monitor.py
src/universal_ai_dev_platform/workflows/initialization/: __init__.py  project_initializer.py
templates/project_types/: templates.yml
templates/project_types/ai-project/: template.yml
templates/project_types/api-service/: template.yml
templates/project_types/api-service/files/: requirements.txt.template
templates/project_types/mobile-app/: template.yml
templates/project_types/web-app/: template.yml
templates/project_types/web-app/files/: README.md.template  package.json.template
tests/: conftest.py
tests/integration/: test_adaptation_workflow.py
tests/unit/: test_feature_discovery.py  test_health_monitor.py  test_universal_analyzer.py
